Làm phần Navigation

--- a/index.html
+++ b/index.html
@@ -87,6 +87,40 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <h1>Chào Em</h1>
+        <!-- Header -->
+        <header class="header">
+            <div class="container">
+                <div class="menu">
+                    <!-- Email -->
+                    <div class="email">
+                        <img
+                            src="./assets/icon/icon-heart.png"
+                            alt=""
+                            class="email__icon"
+                        />
+                        <div class="email__text">hi@arif.interactive</div>
+                    </div>
+                    <!-- Logo -->
+                    <img src="./assets/icon/logo.png" alt="" class="logo" />
+                    <!-- Navigation -->
+                    <nav class="navigation">
+                        <ul class="navigation__list">
+                            <li>
+                                <a href="" class="navigation__link">Projects</a>
+                            </li>
+                            <li>
+                                <a href="" class="navigation__link">Journey</a>
+                            </li>
+                            <li>
+                                <a href="" class="navigation__link">Service</a>
+                            </li>
+                            <li>
+                                <a href="" class="navigation__link">Contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
