Làm phần Hero #2

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             sizes="192x192"
             href="./assets/favicon/android-icon-192x192.png"
         />
-       
+
         <link
             rel="icon"
             type="image/png"
@@ -125,50 +125,67 @@
         <main>
             <!-- Hero -->
             <section class="hero">
-                <div class="hero__inner">
-                    <div class="hero__media">
-                        <img
-                            src="./assets/img/hero-img.png"
-                            alt="An Interactive Designer"
-                        />
-                    </div>
-                    <div class="hero__content">
-                        <div class="hero__content-heading">
-                            An Interactive Designer
+                <div class="container">
+                    <div class="hero__inner">
+                        <div class="hero__media">
+                            <img
+                                class="hero__media-img"
+                                src="./assets/img/hero-img.png"
+                                alt="An Interactive Designer"
+                            />
+
+                            <img
+                                class="media--diagonal-line"
+                                src="./assets/icon/media-diagonal.svg"
+                                alt=""
+                            />
                         </div>
-                        <div class="hero__content-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. In urna, non nisl tincidunt ut elementum
-                            turpis.
-                        </div>
-                        <div class="hero__content-row">
-                            <a href="" class="btn hero__content-book"
-                                >Book a Call</a
-                            >
-                            <a href="" class="hero__content-link">My Works</a>
-                        </div>
-                        <div class="hero__content-row hero__content-footer">
-                            <p class="hero__content-text">Follow me on:</p>
-                            <div class="hero-social">
-                                <div class="hero-social__icon">
-                                    <a href="#!" class="hero-social__link">
-                                        <i class="fa-brands fa-behance"></i
-                                    ></a>
-                                </div>
-                                <div class="hero-social__icon">
-                                    <a href="#!" class="hero-social__link">
-                                        <i class="fa-brands fa-dribbble"></i
-                                    ></a>
-                                </div>
-                                <div class="hero-social__icon">
-                                    <a href="#!" class="hero-social__link">
-                                        <i class="fa-brands fa-instagram"></i
-                                    ></a>
+                        <div class="hero__content">
+                            <div class="hero__content-heading">
+                                An Interactive Designer
+                            </div>
+                            <div class="hero__content-desc">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. In urna, non nisl tincidunt ut
+                                elementum turpis.
+                            </div>
+                            <div class="hero__content-row">
+                                <a href="" class="btn hero__content-book"
+                                    >Book a Call</a
+                                >
+                                <a href="" class="hero__content-link"
+                                    >My Works</a
+                                >
+                            </div>
+                            <div class="hero__content-row hero__content-footer">
+                                <p class="hero__content-text">Follow me on:</p>
+                                <div class="hero-social">
+                                    <div class="hero-social__icon">
+                                        <a href="#!" class="hero-social__link">
+                                            <i class="fa-brands fa-behance"></i
+                                        ></a>
+                                    </div>
+                                    <div class="hero-social__icon">
+                                        <a href="#!" class="hero-social__link">
+                                            <i class="fa-brands fa-dribbble"></i
+                                        ></a>
+                                    </div>
+                                    <div class="hero-social__icon">
+                                        <a href="#!" class="hero-social__link">
+                                            <i
+                                                class="fa-brands fa-instagram"
+                                            ></i
+                                        ></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                 <!-- Diagonal -->
+                 <div class="hero__diagonal">
+                    <img src="./assets/icon/hero-diagonal.svg" alt="">
+                 </div>
             </section>
         </main>
     </body>
