Làm phần Client

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
                         <div class="email__text">hi@arif.interactive</div>
                     </div>
                     <!-- Logo -->
-                    <img src="./assets/icon/logo.png" alt="" class="logo" />
+                    <a href="">
+                        <img src="./assets/icon/logo.png" alt="" class="logo" />
+                    </a>
                     <!-- Navigation -->
                     <nav class="navigation">
                         <ul class="navigation__list">
@@ -122,7 +124,7 @@
             </div>
         </header>
         <!-- Main -->
-        <main>
+        <main style="height: 10000px">
             <!-- Hero -->
             <section class="hero">
                 <div class="container">
@@ -182,10 +184,68 @@
                         </div>
                     </div>
                 </div>
-                 <!-- Diagonal -->
-                 <div class="hero__diagonal">
-                    <img src="./assets/icon/hero-diagonal.svg" alt="">
-                 </div>
+                <!-- Diagonal -->
+                <div class="hero__diagonal">
+                    <img src="./assets/icon/hero-diagonal.svg" alt="" />
+                </div>
+            </section>
+
+            <!-- Client -->
+            <section class="client">
+                <div class="container">
+                    <div class="client__inner">
+                        <h2 class="client__sub-heading">
+                            Meet my recent clients
+                        </h2>
+                        <div class="client__social">
+                            <div class="client__social-list">
+                                <a href="#!" class="client__social-link">
+                                    <img
+                                        src="./assets/icon/Google.svg"
+                                        alt=""
+                                    />
+                                </a>
+                                <a href="#!" class="client__social-link">
+                                    <img
+                                        src="./assets/icon/warner-bros.svg"
+                                        alt=""
+                                    />
+                                </a>
+                                <a href="#!" class="client__social-link">
+                                    <img
+                                        src="./assets/icon/Mailchamp.svg"
+                                        alt=""
+                                    />
+                                </a>
+                                <a href="#!" class="client__social-link">
+                                    <img src="./assets/icon/Adobe.svg" alt="" />
+                                </a>
+                                <a href="#!" class="client__social-link">
+                                    <img
+                                        src="./assets/icon/Upwork.svg"
+                                        alt=""
+                                    />
+                                </a>
+                                <a href="#!" class="client__social-link">
+                                    <img
+                                        src="./assets/icon/Creative-cloude.svg"
+                                        alt=""
+                                    />
+                                </a>
+                                <a href="#!" class="client__social-link">
+                                    <img
+                                        src="./assets/icon/Woocommercde.svg"
+                                        alt=""
+                                    />
+                                </a>
+                                <a href="#!" class="client__social-link">
+                                    <img src="./assets/icon/Canva.svg" alt="" />
+                                </a>
+                            </div>
+                          
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
     </body>
