Làm phần Specialties

--- a/index.html
+++ b/index.html
@@ -242,7 +242,90 @@
                                     <img src="./assets/icon/Canva.svg" alt="" />
                                 </a>
                             </div>
-                          
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Specialities  -->
+            <section class="specialities">
+                <div class="container specialities__container">
+                    <div class="specialities__inner">
+                        <div class="specialities__sub-heading line-clamp line-clamp-1">
+                            Specialities
+                        </div>
+                        <p class="specialities__desc line-clamp line-clamp-2">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. In urna, non nisl tincidunt ut elementum
+                            turpis. 
+                        </p>
+                        <div class="row row-cols-lg-3 specialities__list">
+                            <div class="col">
+                                <div class="specialities__item">
+                                    <div class="specialities__icon">
+                                        <img
+                                            src="./assets/icon/product.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <h3
+                                        class="specialities__item-sub-heading line-clamp line-clamp-1"
+                                    >
+                                        Product design
+                                    </h3>
+                                    <p
+                                        class="specialities__item-desc line-clamp"
+                                    >
+                                        Lorem ipsum dolor sit amet, solor
+                                        adipiscing elit. Non nisl solor ut
+                                        elementum turpis.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="specialities__item">
+                                    <div class="specialities__icon">
+                                        <img
+                                            src="./assets/icon/ui.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <h3
+                                        class="specialities__item-sub-heading line-clamp line-clamp-1"
+                                    >
+                                        UI/UX Design
+                                    </h3>
+                                    <p
+                                        class="specialities__item-desc line-clamp"
+                                    >
+                                        Lorem ipsum dolor sit amet, solor
+                                        adipiscing elit. Non nisl solor ut
+                                        elementum turpis.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="specialities__item">
+                                    <div class="specialities__icon">
+                                        <img
+                                            src="./assets/icon/interactive.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <h3
+                                        class="specialities__item-sub-heading line-clamp line-clamp-1"
+                                    >
+                                        Interactive design
+                                    </h3>
+                                    <p
+                                        class="specialities__item-desc line-clamp"
+                                    >
+                                        Lorem ipsum dolor sit amet, solor
+                                        adipiscing elit. Non nisl solor ut
+                                        elementum turpis.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
