Làm phần Project

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <body>
         <!-- Header -->
         <header class="header">
-            <div class="container">
+            <div class="container heder__container">
                 <div class="menu">
                     <!-- Email -->
                     <div class="email">
@@ -249,15 +249,17 @@
 
             <!-- Specialities  -->
             <section class="specialities">
-                <div class="container specialities__container">
+                <div class="container">
                     <div class="specialities__inner">
-                        <div class="specialities__sub-heading line-clamp line-clamp-1">
+                        <div
+                            class="specialities__sub-heading line-clamp line-clamp-1"
+                        >
                             Specialities
                         </div>
                         <p class="specialities__desc line-clamp line-clamp-2">
                             Lorem ipsum dolor sit amet, consectetur adipiscing
                             elit. In urna, non nisl tincidunt ut elementum
-                            turpis. 
+                            turpis.
                         </p>
                         <div class="row row-cols-lg-3 specialities__list">
                             <div class="col">
@@ -327,6 +329,103 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Project -->
+            <section class="project">
+                <div class="container">
+                    <div class="project__inner">
+                        <div class="project__head">
+                            <h2 class="project__sub-heading">
+                                Take a look at my recent projects
+                            </h2>
+                            <p class="project__desc">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. In urna, non nisl tincidunt ut
+                                elementum turpis.
+                            </p>
+                        </div>
+                        <div class="row row-list">
+                            <div class="col-lg-6">
+                                <div class="project__item">
+                                    <div class="project__item-content">
+                                        <h3 class="project__item-heading line-clamp line-clamp-1">
+                                            Wally Website 
+                                        </h3>
+                                        <p class="project__item-desc line-clamp line-clamp-2">
+                                            Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                                        </p>
+                                        <a href="#" class="project__item-link"> 
+                                            Case Study
+                                        </a>
+                                    </div>
+                                    <a href="#" >
+                                        <img class="project__item-img" src="./assets/img/project-01.png" alt="">
+                                    </a>
+                                    <img class="project-diagonal" src="./assets/icon/project-diagonal.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="project__item">
+                                    <div class="project__item-content">
+                                        <h3 class="project__item-heading line-clamp line-clamp-1">  
+                                            Banking App
+                                        </h3>
+                                        <p class="project__item-desc line-clamp line-clamp-2">
+                                            Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                                        </p>
+                                        <a href="#" class="project__item-link">
+                                            Case Study
+                                        </a>
+                                    </div>
+                                    <a href="#" >
+                                        <img class="project__item-img" src="./assets/img/project-02.png" alt="">
+                                    </a>
+                                    <img class="project-diagonal" src="./assets/icon/project-diagonal.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="project__item">
+                                    <div class="project__item-content">
+                                        <h3 class="project__item-heading line-clamp line-clamp-1">
+                                            Web App
+                                        </h3>
+                                        <p class="project__item-desc line-clamp line-clamp-2">
+                                            Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                                        </p>
+                                        <a href="#" class="project__item-link">
+                                            Case Study
+                                        </a>
+                                    </div>
+                                    <a href="#" >
+                                        <img class="project__item-img" src="./assets/img/project-03.png" alt="">
+                                    </a>
+                                    <img class="project-diagonal" src="./assets/icon/project-diagonal.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="project__item">
+                                    <div class="project__item-content">
+                                        <h3 class="project__item-heading line-clamp line-clamp-1">
+                                            Oculus Website
+                                        </h3>
+                                        <p class="project__item-desc line-clamp line-clamp-2">
+                                            Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                                        </p>
+                                        <a href="#" class="project__item-link">
+                                            Case Study
+                                        </a>
+                                    </div>
+                                    <a href="#" >
+                                        <img class="project__item-img" src="./assets/img/project-04.png" alt="">
+                                    </a>
+                                    <img class="project-diagonal" src="./assets/icon/project-diagonal.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project__btn btn">All Projects</div>
                     </div>
                 </div>
             </section>
